--- a/app.ipynb
+++ b/app.ipynb
@@ -15,9 +15,28 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import sklearn.datasets\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Device config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"Using device:\", device)"
    ]
   },
   {
@@ -107,6 +126,139 @@
    "source": [
     "1 -> Benign \\\n",
     "0 -> Malignant "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Splitting the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = data_frame.drop(labels='target', axis=1)\n",
+    "y = data_frame['target'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Standardize the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Distribution of the first feature and mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_number = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot a histogram of the first feature\n",
+    "plt.hist(X_train[breast_cancer_dataset.feature_names[0]], bins=20, color='blue', alpha=0.7)\n",
+    "plt.title(\"Distribution of \" + breast_cancer_dataset.feature_names[0])\n",
+    "plt.xlabel(breast_cancer_dataset.feature_names[0])\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"mean of the first feature before scaling\",\n",
+    "      X_train[breast_cancer_dataset.feature_names[0]].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot a histogram of the first feature\n",
+    "data = []\n",
+    "\n",
+    "for i in range(0, len(X_train_scaled)):\n",
+    "    data.append(X_train_scaled[i][feature_number])\n",
+    "\n",
+    "plt.hist(data, bins=20, color='blue', alpha=0.7)\n",
+    "plt.title(\"Distribution of \" + breast_cancer_dataset.feature_names[0])\n",
+    "plt.xlabel(breast_cancer_dataset.feature_names[0])\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"mean of the first feature after scaling\",\n",
+    "      X_train_scaled[feature_number].mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Converting the data to tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_tensor = torch.tensor(X_train_scaled, dtype=torch.float32).to(device=device)\n",
+    "X_test_tensor = torch.tensor(X_test_scaled, dtype=torch.float32).to(device=device)\n",
+    "y_train_tensor = torch.tensor(y_train, dtype=torch.float32).to(device=device)\n",
+    "y_test_tensor = torch.tensor(y_test, dtype=torch.float32).to(device=device)"
    ]
   }
  ],
