--- a/app.ipynb
+++ b/app.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing dependencies"
+    "### Importing dependencies\n"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Device config"
+    "### Device config\n"
    ]
   },
   {
@@ -35,7 +35,11 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
     "print(\"Using device:\", device)"
    ]
   },
@@ -43,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Collection and Analysis"
+    "### Data Collection and Analysis\n"
    ]
   },
   {
@@ -62,7 +66,7 @@
    "outputs": [],
    "source": [
     "print(breast_cancer_dataset)\n",
-    "print(\"keys: \" , breast_cancer_dataset.keys())"
+    "print(\"keys: \", breast_cancer_dataset.keys())"
    ]
   },
   {
@@ -71,7 +75,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_frame = pd.DataFrame(breast_cancer_dataset['data'], columns=breast_cancer_dataset['feature_names'])"
+    "data_frame = pd.DataFrame(\n",
+    "    breast_cancer_dataset['data'], columns=breast_cancer_dataset['feature_names'])"
    ]
   },
   {
@@ -125,14 +130,14 @@
    "metadata": {},
    "source": [
     "1 -> Benign \\\n",
-    "0 -> Malignant "
+    "0 -> Malignant\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Splitting the data"
+    "### Splitting the data\n"
    ]
   },
   {
@@ -159,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Standardize the data"
+    "### Standardize the data\n"
    ]
   },
   {
@@ -177,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Distribution of the first feature and mean"
+    "#### Distribution of the first feature and mean\n"
    ]
   },
   {
@@ -196,7 +201,8 @@
    "outputs": [],
    "source": [
     "# Plot a histogram of the first feature\n",
-    "plt.hist(X_train[breast_cancer_dataset.feature_names[0]], bins=20, color='blue', alpha=0.7)\n",
+    "plt.hist(X_train[breast_cancer_dataset.feature_names[0]],\n",
+    "         bins=20, color='blue', alpha=0.7)\n",
     "plt.title(\"Distribution of \" + breast_cancer_dataset.feature_names[0])\n",
     "plt.xlabel(breast_cancer_dataset.feature_names[0])\n",
     "plt.ylabel(\"Frequency\")\n",
@@ -246,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Converting the data to tensors"
+    "### Converting the data to tensors\n"
    ]
   },
   {
@@ -255,10 +261,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_tensor = torch.tensor(X_train_scaled, dtype=torch.float32).to(device=device)\n",
-    "X_test_tensor = torch.tensor(X_test_scaled, dtype=torch.float32).to(device=device)\n",
+    "X_train_tensor = torch.tensor(\n",
+    "    X_train_scaled, dtype=torch.float32).to(device=device)\n",
+    "X_test_tensor = torch.tensor(\n",
+    "    X_test_scaled, dtype=torch.float32).to(device=device)\n",
     "y_train_tensor = torch.tensor(y_train, dtype=torch.float32).to(device=device)\n",
     "y_test_tensor = torch.tensor(y_test, dtype=torch.float32).to(device=device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Neural Network architecture\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NeuralNet(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size):\n",
+    "        super(NeuralNet, self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_size, hidden_size)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.fc2 = nn.Linear(hidden_size, output_size)\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = self.fc1(x)\n",
+    "        out = self.relu(x)\n",
+    "        out = self.fc2(x)\n",
+    "        out = self.sigmoid(x)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hyperparameters\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_size = X_train.shape[1]\n",
+    "hidden_size = 64\n",
+    "output_size = 1\n",
+    "learning_rate = 0.001\n",
+    "num_of_epochs = 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Initialize the model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = NeuralNet(input_size, hidden_size, output_size).to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loss and optimizer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = nn.BCELoss()  # BCE because of binary classification\n",
+    "optimizer = optim.Adam(model.parameters(), lr=learning_rate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoch in range(num_of_epochs):\n",
+    "    model.train()\n",
+    "    optimizer.zero_grad()\n",
+    "    outputs = model.forward(X_train)"
    ]
   }
  ],
