--- a/app.ipynb
+++ b/app.ipynb
@@ -38,7 +38,9 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
+    "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
     "\n",
     "print(\"Using device:\", device)"
    ]
@@ -292,9 +294,9 @@
     "\n",
     "    def forward(self, x):\n",
     "        out = self.fc1(x)\n",
-    "        out = self.relu(x)\n",
-    "        out = self.fc2(x)\n",
-    "        out = self.sigmoid(x)\n",
+    "        out = self.relu(out)\n",
+    "        out = self.fc2(out)\n",
+    "        out = self.sigmoid(out)\n",
     "        return out"
    ]
   },
@@ -312,10 +314,20 @@
    "outputs": [],
    "source": [
     "input_size = X_train.shape[1]\n",
-    "hidden_size = 64\n",
+    "hidden_size = 30\n",
     "output_size = 1\n",
     "learning_rate = 0.001\n",
     "num_of_epochs = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(input_size)\n",
+    "print(X_train_tensor.shape[1])"
    ]
   },
   {
@@ -367,7 +379,23 @@
     "for epoch in range(num_of_epochs):\n",
     "    model.train()\n",
     "    optimizer.zero_grad()\n",
-    "    outputs = model.forward(X_train)"
+    "    outputs = model.forward(X_train_tensor)\n",
+    "\n",
+    "    # applying view method to convert from 1D to 2D with 1 column and retaining the same num of rows using -1\n",
+    "    loss = criterion(outputs, y_train_tensor.view(-1, 1))\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    # Calculate accuracy\n",
+    "    with torch.no_grad():\n",
+    "        prediction = outputs.round()  # to convert to either 0 or 1\n",
+    "        correct_prediction = (\n",
+    "            prediction == y_train_tensor.view(-1, 1)).float().sum()\n",
+    "        accuracy = correct_prediction / y_train_tensor.size(0)\n",
+    "\n",
+    "    if (epoch+1) % 10 == 0:\n",
+    "        print(\n",
+    "            f\"Epoch number: {epoch + 1}/{num_of_epochs}, Loss: {loss.item():.4f}, Accuracy: {accuracy.item() * 100:.2f}%\")"
    ]
   }
  ],
