feat: model evaluation (accuracy) on train and test data

--- a/app.ipynb
+++ b/app.ipynb
@@ -397,6 +397,45 @@
     "        print(\n",
     "            f\"Epoch number: {epoch + 1}/{num_of_epochs}, Loss: {loss.item():.4f}, Accuracy: {accuracy.item() * 100:.2f}%\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(X_train_tensor)\n",
+    "    prediction = outputs.round()\n",
+    "    correct_prediction = (\n",
+    "        prediction == y_train_tensor.view(-1, 1)).float().sum()\n",
+    "    accuracy = correct_prediction / y_train_tensor.size(0)\n",
+    "    print(f\"Accuracy on training data: {accuracy.item() * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(X_test_tensor)\n",
+    "    prediction = outputs.round()\n",
+    "    correct_prediction = (\n",
+    "        prediction == y_test_tensor.view(-1, 1)).float().sum()\n",
+    "    accuracy = correct_prediction / y_test_tensor.size(0)\n",
+    "    print(f\"Accuracy on test data: {accuracy.item() * 100:.2f}%\")"
+   ]
   }
  ],
  "metadata": {
