feat: calculated f1 score for better evaluation

--- a/app.ipynb
+++ b/app.ipynb
@@ -132,7 +132,7 @@
    "metadata": {},
    "source": [
     "1 -> Benign \\\n",
-    "0 -> Malignant\n"
+    "0 -> Malignant"
    ]
   },
   {
@@ -415,10 +415,25 @@
     "with torch.no_grad():\n",
     "    outputs = model(X_train_tensor)\n",
     "    prediction = outputs.round()\n",
+    "\n",
     "    correct_prediction = (\n",
     "        prediction == y_train_tensor.view(-1, 1)).float().sum()\n",
     "    accuracy = correct_prediction / y_train_tensor.size(0)\n",
-    "    print(f\"Accuracy on training data: {accuracy.item() * 100:.2f}%\")"
+    "    print(f\"Accuracy on training data: {accuracy.item() * 100:.2f}%\")\n",
+    "\n",
+    "    # True positives, false positives, false negatives for malignant (0)\n",
+    "    TP = ((prediction == 0) & (y_train_tensor.view(-1, 1) == 0)).float().sum()\n",
+    "    FP = ((prediction == 0) & (y_train_tensor.view(-1, 1) == 1)).float().sum()\n",
+    "    FN = ((prediction == 1) & (y_train_tensor.view(-1, 1) == 0)).float().sum()\n",
+    "\n",
+    "    # Precision, Recall, and F1 Score for malignant class\n",
+    "    precision = TP / (TP + FP + 1e-8)\n",
+    "    recall = TP / (TP + FN + 1e-8)\n",
+    "    f1_score = 2 * (precision * recall) / (precision + recall + 1e-8)\n",
+    "\n",
+    "    print(f\"Precision on training data: {precision * 100:.4f}%\")\n",
+    "    print(f\"Recall on training data: {recall * 100:.4f}%\")\n",
+    "    print(f\"F1 Score on training data: {f1_score.item() * 100:.4f}%\")\n"
    ]
   },
   {
@@ -431,10 +446,25 @@
     "with torch.no_grad():\n",
     "    outputs = model(X_test_tensor)\n",
     "    prediction = outputs.round()\n",
+    "\n",
     "    correct_prediction = (\n",
     "        prediction == y_test_tensor.view(-1, 1)).float().sum()\n",
     "    accuracy = correct_prediction / y_test_tensor.size(0)\n",
-    "    print(f\"Accuracy on test data: {accuracy.item() * 100:.2f}%\")"
+    "    print(f\"Accuracy on test data: {accuracy.item() * 100:.2f}%\")\n",
+    "\n",
+    "    # True positives, false positives, false negatives for malignant (0)\n",
+    "    TP = ((prediction == 0) & (y_test_tensor.view(-1, 1) == 0)).float().sum()\n",
+    "    FP = ((prediction == 0) & (y_test_tensor.view(-1, 1) == 1)).float().sum()\n",
+    "    FN = ((prediction == 1) & (y_test_tensor.view(-1, 1) == 0)).float().sum()\n",
+    "\n",
+    "    # Precision, Recall, and F1 Score for malignant class\n",
+    "    precision = TP / (TP + FP + 1e-8)\n",
+    "    recall = TP / (TP + FN + 1e-8)\n",
+    "    f1_score = 2 * (precision * recall) / (precision + recall + 1e-8)\n",
+    "\n",
+    "    print(f\"Precision on training data: {precision * 100:.4f}%\")\n",
+    "    print(f\"Recall on training data: {recall * 100:.4f}%\")\n",
+    "    print(f\"F1 Score on training data: {f1_score.item() * 100:.4f}%\")"
    ]
   }
  ],
